--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ venv.bak/
 /FIXES_APPLIED.md
 /PRESENTATION.md
 /PROJECT_SUMMARY.md
+/QUICKSTART.md
 /REPORT_TEMPLATE.md
 /TIMESTAMP_FIX_SUMMARY.md
 /UNDERSTANDING_TIMESTAMPS.md
